# erp-stub-system

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: update-docs.md
erp-admin-ui/: Dockerfile  nginx.conf  package.json  vite.config.ts
erp-admin-ui/src/: App.tsx  index.css
erp-admin-ui/src/api/: legacy.ts  modern.ts
erp-admin-ui/src/components/: DataGrid.tsx  SchemaViewer.tsx
erp-admin-ui/src/pages/: Config.tsx  Dashboard.tsx  LegacySystem.tsx  LegacyTable.tsx  LoadManager.tsx  ModernSystem.tsx  ModernTable.tsx
erp-admin-ui/src/state/: index.ts
legacy-erp/: Dockerfile  pyproject.toml
legacy-erp/app/: auth.py  db.py  main.py  schemas.py
legacy-erp/app/profiles/: base.py  dynamics_ax.py  generic.py  oracle_ebs.py  sap_ecc.py
legacy-erp/app/routers/: config.py  tables.py
legacy-erp/data/: generate_seed.py
legacy-erp/data/seed/: CSKS.csv  EKKO.csv  EKPO.csv  KNA1.csv  KNB1.csv  KNBK.csv  KNVV.csv  LFA1.csv  LFAS.csv  LFB1.csv  LFB5.csv  (+9 more)
modern-erp/: Dockerfile  pyproject.toml
modern-erp/app/: auth.py  db.py  main.py  schemas.py
modern-erp/app/routers/: admin.py  tables.py
modern-erp/app/seed/: s4hana.py
modern-erp/app/validation/: engine.py
modern-erp/data/: generate_seed.py
modern-erp/data/seed/: BPAddress.csv  BPBankAccount.csv  BPCompanyCode.csv  BPPurchasingOrg.csv  BPRole.csv  BusinessPartner.csv  CostCenter.csv  GLAccount.csv  Product.csv  ProductPlant.csv  ProductValuation.csv  ProfitCenter.csv  PurchaseOrder.csv  PurchaseOrderItem.csv
postman/: modern-erp-tests.postman_collection.json
